[gd_scene load_steps=6 format=3 uid="uid://c1li8lp13xiwl"]

[ext_resource type="FontFile" uid="uid://cc4n1yg7bibc8" path="res://assets/fonts/paint/TMT-Paint-Regular.otf" id="1_oy4ul"]
[ext_resource type="Script" path="res://scripts/hud/death_menu.gd" id="1_tmuka"]
[ext_resource type="Texture2D" uid="uid://bis0eay2vp4u4" path="res://assets/hud/button.tga" id="2_s8g5x"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_r5rx6"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_ma0a6"]
texture = ExtResource("2_s8g5x")
texture_margin_left = 5.0
texture_margin_top = 5.0
texture_margin_right = 5.0
texture_margin_bottom = 5.0

[node name="DeathMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
script = ExtResource("1_tmuka")

[node name="Container" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -120.0
offset_top = -60.0
offset_right = 120.0
offset_bottom = 101.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme_override_constants/separation = 30

[node name="GameOverLabel" type="Label" parent="Container"]
layout_mode = 2
size_flags_vertical = 1
size_flags_stretch_ratio = 0.2
theme_override_fonts/font = ExtResource("1_oy4ul")
theme_override_font_sizes/font_size = 50
text = "GAME OVER"
horizontal_alignment = 1

[node name="Description" type="Label" parent="Container"]
custom_minimum_size = Vector2(500, 0)
layout_mode = 2
size_flags_vertical = 1
size_flags_stretch_ratio = 0.2
theme_override_fonts/font = ExtResource("1_oy4ul")
theme_override_font_sizes/font_size = 20
text = "Your journey ends here. While this would have meant to start over you can choose to try again :)"
horizontal_alignment = 1
autowrap_mode = 2

[node name="Buttons" type="VBoxContainer" parent="Container"]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 0.8
mouse_filter = 2
theme_override_constants/separation = 50

[node name="RestartContainer" type="Panel" parent="Container/Buttons"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
size_flags_stretch_ratio = 0.2
mouse_filter = 2
theme_override_styles/panel = SubResource("StyleBoxEmpty_r5rx6")

[node name="TextureRect" type="TextureRect" parent="Container/Buttons/RestartContainer"]
custom_minimum_size = Vector2(500, 0)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -126.0
offset_top = -70.0
offset_right = 123.0
offset_bottom = 65.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
texture = ExtResource("2_s8g5x")

[node name="RestartButton" type="Button" parent="Container/Buttons/RestartContainer"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_fonts/font = ExtResource("1_oy4ul")
theme_override_font_sizes/font_size = 30
theme_override_styles/normal = SubResource("StyleBoxTexture_ma0a6")
text = "Start Over"
flat = true

[node name="BackContainer" type="Panel" parent="Container/Buttons"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
size_flags_stretch_ratio = 0.2
mouse_filter = 2
theme_override_styles/panel = SubResource("StyleBoxEmpty_r5rx6")

[node name="TextureRect" type="TextureRect" parent="Container/Buttons/BackContainer"]
custom_minimum_size = Vector2(500, 0)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -126.0
offset_top = -70.0
offset_right = 123.0
offset_bottom = 65.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
texture = ExtResource("2_s8g5x")

[node name="BackButton" type="Button" parent="Container/Buttons/BackContainer"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_fonts/font = ExtResource("1_oy4ul")
theme_override_font_sizes/font_size = 30
theme_override_styles/normal = SubResource("StyleBoxTexture_ma0a6")
text = "Restart here (jam)"
flat = true

[node name="ExitContainer" type="Panel" parent="Container/Buttons"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
size_flags_stretch_ratio = 0.2
mouse_filter = 2
theme_override_styles/panel = SubResource("StyleBoxEmpty_r5rx6")

[node name="TextureRect" type="TextureRect" parent="Container/Buttons/ExitContainer"]
custom_minimum_size = Vector2(500, 0)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -126.0
offset_top = -70.0
offset_right = 123.0
offset_bottom = 65.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
texture = ExtResource("2_s8g5x")

[node name="ExitButton" type="Button" parent="Container/Buttons/ExitContainer"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_fonts/font = ExtResource("1_oy4ul")
theme_override_font_sizes/font_size = 30
theme_override_styles/normal = SubResource("StyleBoxTexture_ma0a6")
text = "Exit Game"
flat = true

[connection signal="pressed" from="Container/Buttons/RestartContainer/RestartButton" to="." method="_on_restart_button_pressed"]
[connection signal="pressed" from="Container/Buttons/BackContainer/BackButton" to="." method="_on_back_button_pressed"]
[connection signal="pressed" from="Container/Buttons/ExitContainer/ExitButton" to="." method="_on_exit_button_pressed"]
